<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rsz_brojback"
    tools:context="com.example.ajdin.tracebrace.Registration">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/create_account"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="13dp"
        android:text="@string/personal_information" />


    <EditText
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:id="@+id/editText3"
        android:layout_width="280dp"
        android:drawableLeft="@drawable/username"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/textView5"
        android:hint="@string/full_name"
        />

    <EditText
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:drawableLeft="@drawable/mejl"
        android:id="@+id/editText4"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"

        android:hint="@string/e_mail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="29dp"
        android:text="@string/security" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="280dp"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:drawableLeft="@drawable/pw"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
        android:layout_below="@+id/textView4"
        android:inputType="textPassword"
        android:hint="@string/password_min_8_characters" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:drawableLeft="@drawable/pw"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/editText6"
        android:inputType="textPassword"

        android:hint="@string/confirm_password" />
    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="#EE9D06"
        android:text="@string/register" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/or" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        android:background="@drawable/foodle"
        android:id="@+id/buttonf"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/lihsa"
        android:layout_alignRight="@id/button2"
        android:layout_marginLeft="200dp"
        android:layout_alignBottom="@id/buttonf"
        />








</RelativeLayout>
